# gemini_cli_rust

./: .gitignore  Cargo.toml  README.md
DOCUMENTS/: PRD_gemini_cli_rust.md  SDD_gemini_cli_rust.md  SRS_gemini_cli_rust.md  STP_gemini_cli_rust.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/api/: client.rs  models.rs
src/io/: exec.rs  mod.rs  pipe.rs  stream.rs
