[package]
name = "gemini_cli_rust"
version = "1.0.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
thiserror = "2.0"
bytes = "1"
